...
    android:text="@string/user_settings"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/nicknameInputEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:ems="10"
    android:hint="@string/your_nickname_goes_here"
    android:inputType="textPersonName"
...
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.079"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/nicknameLabelTextView" />

  <Button
    android:id="@+id/userSettingsSaveButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/save"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/nicknameInputEditText" />
...
