...
  <string name="now_ordering">Now Ordering!</string>
  <string name="order">Order</string>
  <string name="no_product_name">No product name specified!</string>
  <string name="nickname">Nickname</string>
  <string name="user_settings">User Settings</string>
  <string name="your_nickname_goes_here">Your nickname goes here</string>
  <string name="save">Save</string>
  <string name="nickname_with_input">Nickname: %1$s</string>
  <string name="add_a_description">Add a description</string>
  <string name="add_product">Add Product</string>
  <string name="description">Description</string>
  <string name="product_category">Product Category</string>
  <string name="pick_a_category">Pick A Category</string>
...
